2002-03-06  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/icccm2.c (SetupICCCM2):
	removed debug fprintf

	* fvwm/functions.c (expand_extended_var):
	implemented new extended variables pointer.x, pointer.x, pointer.wx,
	pointer.wy, pointer.cx and pointer.cy.

	* libs/Parse.c (ParseDirectionArgument):
	allow N, S, W, E, NW, SW, SE, NE for direction arguments

	* fvwm/builtins.c (CMD_WindowShade):
	fixes for animated shading w/ titleatbottom+north and titleattop+south

2002-03-06  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/move_resize.c (moveLoop):
	(resize_window):
	* fvwm/virtual.c (HandlePaging):
	moving/resizing windows opaque is much faster

2002-03-05  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/add_window.c (resize_resize_handle_windows):
	(change_resize_handle_windows):
	(setup_window_font):
	fixed changing the handlewidth style

	* fvwm/update.c (apply_window_updates):
	* fvwm/geometry.c (update_absolute_geometry):
	* fvwm/builtins.c (CMD_WindowShade):
	* fvwm/ewmh_events.c (ewmh_WMStateShaded):
	* fvwm/conditional.c (CreateConditionMask):
	* fvwm/geometry.c (get_shaded_geometry):
	* fvwm/session.c (MatchWinToSM):
	* fvwm/add_window.c (setup_window_structure):
	(AddWindow):
	* fvwm/window_flags.h (SHADED_DIR):
	* fvwm/fvwm.h (struct):
	implemented new WindowShade options "North" and "South" to allow shading
	a window in either direction, regardless of if the title is at the top
	or bottom.

	* libs/Module.c (module_expand_action):
	new convenience function for modules

2002-03-03  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/fvwm2.1: Fixes to the font section.

2002-03-03  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/conditional.c (CMD_WindowId):
	set the correct context window for unmanaged windows

	* fvwm/icons.c (DrawIconWindow):
	raise the icon title even if it's too small to be expanded

	* fvwm/conditional.c (CMD_Cond):
	Fixed it the right way this time
	(CMD_Any):
	same fix for the 'Any' command
	(circulate_cmd):
	(CMD_Prev):
	(CMD_Next):