@@ -191,7 +191,7 @@ enum
 	STROKE_ARG(F_STROKE_FUNC)
 	F_STYLE,
 	F_TEARMENUOFF,
-	F_THIS,
+	F_THISWINDOW,
 	F_TITLE,
 	F_TITLESTYLE,
 	F_TOGGLE_PAGE,
