@@ -1,5 +1,14 @@
 2002-03-06  Dominik Vogt  <dominik.vogt@gmx.de>
 
+	* fvwm/functions.h (enum):
+	* fvwm/functions.c (func_config):
+	* fvwm/commands.h:
+	* fvwm/conditional.c (CMD_ThisWindow):
+	renamed command "This" to "ThisWindow"
+
+	* fvwm/conditional.c (Circulate):
+	"Current" no longer selects a random window when no window is focused
+
 	* fvwm/icccm2.c (SetupICCCM2):
 	removed debug fprintf
 
